pillar-web/src/styles/_project.sass
// Flex parent of both tree-view and side-view
#project_container
	position: relative
	z-index: 12
	margin: 0 auto 25px auto

	border-radius: 3px
	box-shadow: 2px 2px 2px rgba(darken($color-background, 60%), .1)

#project-flex
	display: flex
	align-items: stretch
	width: 100%
	// So we have *some* page scroll, inside it uses perfectscrollbar
	min-height: 600px

#project-nav,
#project_context-container
	flex: 1 100%

/* Sidebar Navigation on the left */
#project_nav
	position: relative
	overflow: hidden
	width: 280px
	padding: auto 0
	position: relative

	color: white
	background-color: rgba(darken($color-background, 80%), .8)
	border-right: thick solid darken($color-background, 75%)
	border-bottom-left-radius: 3px

	-webkit-user-select: none
	-moz-user-select: none
	-ms-user-select: none
	-o-user-select: none
	user-select: none

	&.project_nav-collapsed
		width: 35px
		border-color: darken($color-background, 75%)
		background-color: darken($color-background, 65%)


#project-header
	display: flex
	align-items: center

	position: relative
	width: 100%
	height: 40px
	background-color: darken($color-background, 65%)
	color: white

	clear: both

	border-top-left-radius: 3px
	border-top-right-radius: 3px

	.project-header-title
		font-weight: 500
		display: inline-block
		padding:
			top: 0
			left: 15px
			right: 15px
			bottom: 0

	ul.breadcrumb
		position: relative
		padding: 0
		margin: 0 0 0 10px
		background-color: transparent
		display: inline-block
		color: lighten($color-text, 25%)
		font-weight: 300

		li
			margin: 0
			padding: 2px
			float: left

			&.active
				color: lighten($color-text, 40%)
				font-weight: 400

		/* The > separating each breadcrumb */
		li+li:before,
		&:before
			color: lighten($color-text, 15%)
			content: '\f105'
			font:
				family: 'FontAwesome'

		&:before
			position: absolute
			left: -13px
			top: 2px

	ul.project-edit-tools
		align-self: flex-end
		display: flex
		align-items: stretch
		height: 100%
		padding: 0
		margin:
			top: 0
			left: auto
			right: 0
			bottom: 0
		color: lighten($color-text, 50%)

		list-style-type: none

		font-size: .9em

		a
			color: lighten($color-text, 50%)

			&:hover
				color: lighten($color-text, 60%)

			li
				margin: 5px
				padding: 5px 15px
				float: left
				border-radius: 3px
				border: thin solid darken($color-background, 50%)

				text-transform: uppercase

				i
					padding-right: 5px

				&:hover
					background-color: darken($color-background, 60%)

			// &:not(:last-of-type)
				// border-right: thin solid darken($color-background, 50%)

	#project-loading
		// float: right
		padding: 8px
		color: lighten($color-text, 25%)
		// position: relative
		left: 8px
		top: 1px
		display: none

	.project_nav-expand-btn
		float: left
		text-align: center
		padding:
			left: 12px

		i
			font-size: 1.3em
			position: relative
			top: 1px

.project_nav-collapse-btn,
.project_nav-expand-btn
	display: block
	cursor: pointer
	color: lighten($color-text, 20%)

	&:hover
		color: lighten($color-text, 30%)

	i
		font-size: 1.3em

.project_nav-collapse-btn
	position: absolute
	bottom: 0
	left: 0
	padding: 10px


/* Project context on the right of the navigation */
#project_context-container
	position: relative
	// width: 100%
	color: $color-text
	background-color: white
	padding: 0

	border-bottom-right-radius: 3px

	iframe#server_error
		width: 100%
		min-height: 800px
		border: none


/* The actual tree */
#project_tree
	padding: 5px 0


/* Overview, Navtree, draggable split-bar */
.project_split
	height: 100%
	float: right
	position: absolute
	right: -6px
	width: 10px
	z-index: 10
	cursor: w-resize
	-webkit-user-select: none
	-moz-user-select: none
	-ms-user-select: none
	-o-user-select: none
	user-select: none

	// &:before
	// 	content: '\f142'
	// 	font-family: 'FontAwesome'
	// 	color: lighten($color-text, 40%)
	// 	position: relative
	// 	padding: 4px 0
	// 	top: 50%
	// 	left: 30%


/* Project Context */
section.project_context-header
	margin: 0
	padding: 0

	img
		width: 100%


section.project_context-content
	.project_context-title
		padding: 20px 15px 5px 15px
		font:
			family: $font-headings-secondary
			size: 2em
	.project_context-description
		padding: 5px 15px 20px 15px
		width: 75%

/* */
section.node-preview
	&.image,
	&.file
		max-height: 600px
		background-color: black

		img
			display: block
			max-width: 100%
			max-height: 600px
			margin: 0 auto

section.node-details-container
	.node-details-header
		.node-title
			margin: 0
			padding: 15px 25px 5px 25px
			font:
				family: $font-headings-secondary
				size: 2em
				weight: 300

	.node-details-description
		padding: 5px 25px 20px 25px
		font-weight: 300

	.node-details-meta
		font-weight: 300
		padding: 15px 25px
		border-top: thin solid $color-background

		ul.node-details-meta-list
			display: flex
			align-items: center

			list-style-type: none
			margin: 0
			padding: 0

			li.node-details-meta-list-item
				margin: 0
				padding: 0 10px 0 0
				line-height: 1em
				float: left

				&.date
					color: lighten($color-text, 30%)

				&.status
					margin-right: 10px
					font-size: .9em
					text-transform: capitalize
					color: lighten($color-text, 30%)
					padding: 5px 15px
					border: thin solid lighten($color-text, 40%)
					border-radius: 3px
					cursor: default

				&.length
					margin-left: auto
					padding: 0 5px 0 15px
					cursor: default
					font-weight: 400
					color: lighten($color-text, 30%)

				/* Download button */
				&.download
					align-self: flex-end
					// margin-left: auto
					padding: 0 0 0 15px

					&.video
						margin-left: auto

					/* Actual button */
					button
						color: lighten($color-text, 10%)
						border: thin solid darken($color-background, 10%)
						border-radius: 50px
						padding:
							left: 20px
							right: 15px

						text-transform: uppercase
						font-size: .9em

						&:hover
							color: $color-primary
							border-color: $color-primary
							background-color: transparent

						&:focus
							outline: none
							box-shadow: none
							color: $color-primary
							border-color: $color-primary
							background-color: $color-background

						/* Tweaks for individual icons */
						i.icon-dropdown-menu
							padding-left: 10px

						i.icon-download-file
							position: relative
							left: -5px

					&.image
						button
							padding-left: 15px

					/* Download dropdown options */
					ul.dropdown-menu
						width: auto
						min-width: 240px
						padding: 0
						margin: 0
						top: initial
						left: initial
						right: 0
						bottom: 35px
						border: thin solid rgba(darken($color-background, 5%), .3)
						border-top-left-radius: 3px
						border-top-right-radius: 3px
						border-bottom-left-radius: 0
						border-bottom-right-radius: 0

						li
							padding: 0
							text-align: right
							clear: both
							display: flex
							align-items: center

							a
								padding: 10px 15px
								width: 100%

								&:hover
									color: $color-primary
									background-color: transparent

								span
									&.length
										float: left
										color: lighten($color-text, 40%)
										padding-right: 15px
									&.format
										text-transform: uppercase
										align-self: flex-end
										margin-left: auto
									&.size
										display: inline-block
										padding-left: 15px
					&.open
						button
							box-shadow: none

section.node-children
	&.group
		padding: 15px 25px

$list-node-children-item-width: 160px

.list-node-children-item
	float: left
	margin: 10px 20px 10px 0
	border-radius: 3px
	color: $color-text
	background-color: darken(white, 5%)
	box-shadow: 2px 2px 0 rgba(darken($color-background, 60%), .1)
	width: $list-node-children-item-width
	overflow: hidden
	text-overflow: ellipsis

	&:hover
		opacity: .9
		color: darken($color-primary, 20%)

	& .list-node-children-item-picture
		display: block
		width: $list-node-children-item-width
		height: $list-node-children-item-width
		background-color: darken(white, 12%)
		position: relative
		text-align: center

		& .list-node-children-item-folder
			position: absolute
			top: 50%
			transform: translateY(-50%)
			font-size: 6em
			color: darken(white, 25%)
			width: $list-node-children-item-width

	& .list-node-children-item-name
		display: inline-block
		padding: 5px 3px 0px 10px
		font-size: .9em
		+text-overflow-ellipsis
		width: $list-node-children-item-width

	& .list-node-children-item-icon
		padding-right: 3px
		color: lighten($color-text, 30%)

.debug
	font:
		family: monospace
		size: .9em
	padding: 10px 15px


@import plugins/_flowplayer

